# WeatherAPI

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/Weather_API/: utils.py
src/Weather_API/data_interfaces/: openweathermap.py
src/Weather_API/db/: sqllite.py
src/Weather_API/server/: main.py
src/Weather_API/server/api/: core.py
src/Weather_API/server/api/routers/: OculaWeather.py
